--- a/servers_1.cfg
+++ b/servers_1.cfg
@@ -45,7 +45,7 @@ listen postgres
 	mode tcp
 	option pgsql-check user postgres
 	balance roundrobin
-	server audrey 24.98.255.22:5432 check
+	# server audrey 24.98.255.22:5432 check
 	server aws 52.201.253.38:5432 check 
 	# server aws1 54.209.168.101:5432 check
 	# server aws2 54.221.17.161:5432 check
