--- a/servers_4.cfg
+++ b/servers_4.cfg
@@ -46,6 +46,6 @@ listen postgres
 	option pgsql-check user postgres
 	balance roundrobin
 	server audrey 24.98.255.22:5432 check
-	server aws 52.201.253.38:5432 check 
-	server aws1 54.209.168.101:5432 check
-	server aws2 54.221.17.161:5432 check
+	server aws ec2-54-226-57-144.compute-1.amazonaws.com:5432 check 
+	server aws1 ec2-50-17-30-28.compute-1.amazonaws.com:5432 check
+	server aws2 ec2-54-91-97-231.compute-1.amazonaws.com:5432 check
