--- a/haproxy_cfg/servers_1.cfg
+++ b/haproxy_cfg/servers_1.cfg
@@ -45,7 +45,7 @@ listen postgres
 	mode tcp
 	option pgsql-check user postgres
 	balance roundrobin
-	# server audrey 24.98.255.22:5432 check
+	# server personal 24.98.255.22:5432 check
 	server aws ec2-54-226-57-144.compute-1.amazonaws.com:5432 check 
 	# server aws1 ec2-50-17-30-28.compute-1.amazonaws.com:5432 check
 	# server aws2 ec2-54-91-97-231.compute-1.amazonaws.com:5432 check
